--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Webapp-service
+  name: webapp-service
 spec:
-  type: LoadBalancer
   selector:
-    app: Webapp
+    app: webapp
   ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
+  type: LoadBalancer
+
